--- a/default.yaml
+++ b/default.yaml
@@ -156,6 +156,7 @@ recognizer:
     url: "^(www[.]|https?:|ftp[.:]|mailto:|file:).*$|^[a-z]+[.].+$"  # URL
     underscore: "^[A-Za-z]+_.*"  # 下划线不上屏
     url_2: "^[A-Za-z]+[.].*"   # 句号不上屏，支持 google.com abc.txt 等网址或文件名，使用句号翻页时需要注释掉
+    # number: "^[A-Za-z]+[0-9].*"   # Android 数字不上屏
     # colon: "^[A-Za-z]+:.*"     # 冒号不上屏
 
 
